:bug: Fix avatar image/menu in wrong position closes #249

--- a/frontend/themes/komunumo/views/admin/admin-layout.css
+++ b/frontend/themes/komunumo/views/admin/admin-layout.css
@@ -50,6 +50,7 @@ vaadin-app-layout[dir='rtl'] #header vaadin-avatar {
 #header vaadin-menu-bar {
     margin-left: auto;
     margin-right: var(--lumo-space-m);
+    width: auto;
 }
 
 #header h1 {
